fix: centering projectView, removing table gap in project list view

--- a/src/styles/projectView.module.scss
+++ b/src/styles/projectView.module.scss
@@ -10,6 +10,7 @@
 
 .project-page-contents {
   width: 100%;
+  margin: 0 20rem;
 }
 
 .project-container {
